# cicd_demo_app

./: .coverage  .dockerignore  Dockerfile  README.md  coverage.xml  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_main.py
